--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <!-- end of navigation -->
     </div>
     <!-- Header -->
-    <!-- End of Header -->
+
     <header class="header">
       <div class="brand">
         <div>
@@ -108,11 +108,99 @@
         <h3 class="hotel-heading">Grand Hotel</h3>
       </div>
       <div class="banner">
-        <h1 class="banner-hearing">Welcome to Grand Hotel</h1>
+        <h1 class="banner-heading">Welcome to Grand Hotel</h1>
         <p class="banner-paragraph">Make your life luxirious</p>
-        <button class="banner-button">Checkout</button>
+        <button class="banner-button">Check Out</button>
       </div>
     </header>
+    <!-- End of Header -->
+    <!-- About us -->
+    <section class="about-us">
+      <div class="about-us-content">
+        <h1 class="about-us-heading">About Us</h1>
+        <div class="underline">
+          <div class="small-underline"></div>
+          <div class="big-underline"></div>
+        </div>
+        <h3 class="subheading">Grand Hotel</h3>
+        <p class="about-us-paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, nesciunt?
+        </p>
+        <button class="about-us-btn">
+          Read More
+          <i class="fas fa-angle-double-right btn-arrow"></i>
+        </button>
+      </div>
+      <div class="about-us-images">
+        <img src="./img/about-us-img-1.jpeg" class="image image-1" alt="" />
+        <img src="./img/about-us-img-2.jpeg" class="image image-2" alt="" />
+        <img src="./img/about-us-img-3.jpeg" class="image image-3" alt="" />
+        <img src="./img/about-us-img-4.jpeg" class="image image-4" alt="" />
+      </div>
+    </section>
+    <!-- End of About us -->
+    <!-- rooms -->
+    <section class="rooms">
+      <div class="commor-header">
+        <h1 class="commor-heading">Rooms in Grand Hotel</h1>
+        <div class="underline">
+          <div class="small-underline"></div>
+          <div class="big-underline"></div>
+        </div>
+        <div class="rooms-cards-wrapper">
+          <div class="room-card">
+            <img src="./img/single-room.jpeg" class="room-img" alt="room-img" />
+            <div class="room-content">
+              <h1 class="room-card-heading">Single Room</h1>
+              <p class="room-card-paragraph">Lorem ipsum dolor sit amet.</p>
+              <p class="room-price">$99.00</p>
+              <button class="room-card-btn">
+                Book Now
+                <i class="fas fa-angle-double-right btn-arrow"></i>
+              </button>
+            </div>
+          </div>
+          <div class="room-card">
+            <img src="./img/double-room.jpeg" class="room-img" alt="room-img" />
+            <div class="room-content">
+              <h1 class="room-card-heading">Doulbe Room</h1>
+              <p class="room-card-paragraph">Lorem ipsum dolor sit amet.</p>
+              <p class="room-price">$199.00</p>
+              <button class="room-card-btn">
+                Book Now
+                <i class="fas fa-angle-double-right btn-arrow"></i>
+              </button>
+            </div>
+          </div>
+          <div class="room-card">
+            <img src="./img/lux.jpeg" class="room-img" alt="room-img" />
+            <div class="room-content">
+              <h1 class="room-card-heading">Lux</h1>
+              <p class="room-card-paragraph">Lorem ipsum dolor sit amet.</p>
+              <p class="room-price">$299.00</p>
+              <button class="room-card-btn">
+                Book Now
+                <i class="fas fa-angle-double-right btn-arrow"></i>
+              </button>
+            </div>
+          </div>
+          <div class="room-card">
+            <img src="./img/vip.jpeg" class="room-img" alt="room-img" />
+            <div class="room-content">
+              <h1 class="room-card-heading">VIP</h1>
+              <p class="room-card-paragraph">Lorem ipsum dolor sit amet.</p>
+              <p class="room-price">$399.00</p>
+              <button class="room-card-btn">
+                Book Now
+                <i class="fas fa-angle-double-right btn-arrow"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <button class="rooms-btn">Check All Rooms</button>
+      </div>
+    </section>
+    <!-- end of rooms -->
     <!-- End of NavBar -->
   </body>
 </html>
